mail sending + prepared event firing
