# Server/rest-api-module/src/main/java/com/romiiis/service/MailHogEmailService.java
@@ -1,0 +1,57 @@
+package com.romiiis.service;
+
+
+import com.romiiis.domain.Project;
+import com.romiiis.service.interfaces.IMailService;
+import com.romiiis.service.interfaces.IProjectService;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.mail.SimpleMailMessage;
+import org.springframework.mail.javamail.JavaMailSender;
+
+import java.util.UUID;
+
+@Slf4j
+@RequiredArgsConstructor
+public class MailHogEmailService implements IMailService {
+
+
+    private final JavaMailSender emailSender;
+
+
+
+    @Override
+    public void sendEmailToCustomer(Project project, String subject, String text) {
+
+
+        log.info("Sending email to customer with subject {}", subject);
+        String customerEmail = project.getCustomer().getEmailAddress();
+        sendEmail(customerEmail, subject, text);
+
+
+    }
+
+    @Override
+    public void sendEmailToTranslator(Project project, String subject, String text) {
+
+        log.info("Sending email to translator with subject {}", subject);
+        String translatorEmail = project.getTranslator().getEmailAddress();
+        sendEmail(translatorEmail, subject, text);
+
+
+
+    }
+
+    private void sendEmail(String to, String subject, String body) {
+        SimpleMailMessage message = new SimpleMailMessage();
+        message.setFrom("noreply@linguaflow.com");
+        message.setTo(to);
+        message.setSubject(subject);
+        message.setText(body);
+
+        emailSender.send(message);
+    }
+
+
+}
